--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.4.5'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'groovy'
 }
 
 group = 'com.thoughtworks.firenze'
@@ -20,12 +21,12 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.projectlombok:lombok:1.18.4'
+	implementation 'org.apache.commons:commons-lang3:3.11'
+	implementation 'com.mastfrog:jackson:2.7.2'
+	implementation 'org.codehaus.groovy:groovy:2.5.13'
+	annotationProcessor 'org.projectlombok:lombok:1.18.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.spockframework:spock-core:1.2-groovy-2.5'
 }
 
-test {
-	useJUnitPlatform()
-}
